test/types/imag/opequals2.3.good
opequals2.chpl:7: error: Cannot assign to imag(64) from real(64)
